# deepseek_code

./: .gitignore  README.md  pyproject.toml  run_dsc.py
dsc/: __init__.py  cli.py  config.py  debug.py
dsc/agent/: __init__.py  llm.py  loop.py  prompts.py
dsc/context/: __init__.py  compaction.py  manager.py  repair.py  tokens.py
dsc/session/: __init__.py  export.py  store.py
dsc/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  read_archive.py  web.py  web_fetch.py  web_search.py  write.py
dsc/tui/: __init__.py  app.py  clipboard.py  commands.py  gitstatus.py  mermaid.py  prompt.py  session_picker.py  tree_menu.py  widgets.py
tests/: test_app.py  test_bash.py  test_commands.py  test_config.py  test_context.py  test_edit.py  test_environment.py  test_export.py  test_gitstatus.py  test_loop_integration.py  test_mermaid.py  test_prompt.py  test_repair.py  test_resume.py  test_session.py  test_session_picker.py  test_web_search.py  test_widgets.py
